hacking my way to parsing values early on